--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -30,7 +30,7 @@
             </div>
             <div class="navbar-nav">
               {% if request.user.is_authenticated %}
-                <a class="nav-item nav-link" href="{% url 'blog'%} ">Profile</a>
+                <a class="nav-item nav-link" href="{% url 'profile'%} ">Profile</a>
                 <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
               {% else %}
                 <a class="nav-item nav-link" href="{% url 'login'%} ">Login</a>
