"create update delete blogs"

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -30,11 +30,12 @@
             </div>
             <div class="navbar-nav">
               {% if request.user.is_authenticated %}
+                x <a class="nav-item nav-link" href="{% url 'blogcreate' %}">Create Blog</a>
                 <a class="nav-item nav-link" href="{% url 'profile'%} ">Profile</a>
                 <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
               {% else %}
+                <a class="nav-item nav-link" href="{% url 'blogcreate' %}">Create Blog</a>
                 <a class="nav-item nav-link" href="{% url 'login'%} ">Login</a>
-                <a class="nav-item nav-link" href="{% url 'register' %}">Register</a>
               {% endif %}
 
             </div>
