--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -16,35 +16,42 @@
       {% endif %}
     <head>
     <body>
-      <header class="sticky-top">
-        <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
-          <div class="container">
-            <a class="navbar-brand mr-4" href="{% url 'blog' %}">OneBlog</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarToggle">
-              <div class="navbar-nav mr-auto">
-                <a class="nav-item nav-link" href="{% url 'blog' %}">Home</a>
-                <a class="nav-item nav-link" href="{% url 'blog' %}">About</a>
-            </div>
-            <div class="navbar-nav">
-              {% if request.user.is_authenticated %}
-                x <a class="nav-item nav-link" href="{% url 'blogcreate' %}">Create Blog</a>
-                <a class="nav-item nav-link" href="{% url 'profile'%} ">Profile</a>
-                <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
-              {% else %}
-                <a class="nav-item nav-link" href="{% url 'blogcreate' %}">Create Blog</a>
-                <a class="nav-item nav-link" href="{% url 'login'%} ">Login</a>
-              {% endif %}
+      <!-- home header -->
 
-            </div>
-            </div>
-          </div>
-        </nav>
-      </header>
+        <header class="sticky-top">
+          <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
+
+            <a class="navbar-brand ml-lg-4" href="{% url 'blog' %}">OneBlog</a>
+            <a class="navbar-brand ml-lg-4" href="{% url 'blogcreate' %}">Create Blog</a>
+            <!-- Toggler/collapsibe Button -->
+        <button class="navbar-toggler border border-light" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="collapsibleNavbar">
+          <ul class="navbar-nav ml-auto mr-4">
+              {% if request.user.is_authenticated %}
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'profile'%} ">Profile</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+              </li>
+              {% else %}
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'login'%} ">Login</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'blog' %}">About</a>
+              </li>
+              {% endif %}
+          </ul>
+        </div>
+          </nav>
+        </header>
+      <!-- home header end -->
 
       <main class="container mainBlog">
+        <div class="col-lg-9 col-sm-12 col-md-12 mx-auto mt-3">
         {% if messages %}
            {% for message in messages %}
              <div class="alert alert-{{ message.tags }}">
@@ -55,6 +62,7 @@
         {% block content %}
 
         {% endblock %}
+      </div>
       </main>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
