--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -93,15 +93,18 @@
 						<div class="col-xl-4 col-lg-3 col-md-3 col-sm-2">
 									<!-- Blog item -->
 									<div class="blog-item">
-											<img src="{% static 'blog/image2.jpg' %}" alt="picture" class="img-fluid img1">
+										{{ blog.0 }}
+										<a href="{% url 'blogdetail' blog.id %}">
+											 <img src="{{ blog.feautured_image.url }}" alt="picture" class="img-fluid img1">
+										 </a>
 											<div class="blog-text text-box text-white">
-												<h3>The best online game is out now!</h3>
-												<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius-mod tempor </p>
+										<a href="{% url 'blogdetail' blog.id %}">  <h3>{{ blog.blog_title }}</h3></a>
+												<p>{{ blog.blog_type }} </p>
 												<div class="media">
-															<img src="{% static 'blog/pic.jpg'%}" alt="pavan" class="mr-3 rounded-circle circ1">
+															<img src="{{ blog.author.userprofile.profile_picture.url }}" alt="img" class="mr-3 rounded-circle circ1">
 															<div class="media-body">
-																<h3>Pavan Kumar </h3>
-																<small><i>February 19, 2016</i> </small>
+																<h3>{{ blog.author.username }}</h3>
+																<small><i>{{ blog.published_date }}</i> </small>
 															</div>
 													</div>
 											</div>
@@ -112,7 +115,7 @@
 												<div class="blog-item">
 											<img src="{% static 'blog/image1.jpg' %}" alt="picture" class="img-fluid img1">
 												<div class="blog-text text-box text-white">
-												<h3>The best online game is out now!</h3>
+												<h3>Comming soon!</h3>
 												<div class="media">
 															<img src="{% static 'blog/pic.jpg'%}" alt="pavan" class="mr-3 rounded-circle circ1">
 															<div class="media-body">
@@ -128,8 +131,8 @@
 									<div class="blog-item">
 											<img src="{% static 'blog/image2.jpg' %}" alt="picture" class="img-fluid img1">
 											<div class="blog-text text-box text-white">
-												<h3>The best online game is out now!</h3>
-												<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius-mod tempor </p>
+												<h3>coming sooon!</h3>
+												<p>coming soon! </p>
 												<div class="media">
 															<img src="{% static 'blog/pic.jpg'%}" alt="pavan" class="mr-3 rounded-circle circ1">
 															<div class="media-body">
