home page button mobile responsive changed2

--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -80,7 +80,7 @@
 										</p>
 											<div class="text-center py-2">
 										<a href="{% url 'blogcreate' %}"
-											<button type="button" class="btn btn-lg  col-lg-2 col-md-12 mx-4 btn-hover">Create Blog</button> </a>
+											<button type="button" class="btn btn-lg  col-lg-2 col-md-12 mx-lg-4 btn-hover">Create Blog</button> </a>
 										<a href="{% url 'bloglist' %}"
 											<button type="button" class="btn btn-lg  col-lg-2 col-md-12 btn-hover">Read Blogs</button></a>
 										</div>
